# Quantixar

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  flake.nix  hooks.yaml  iter.sh  rust-toolchain.toml  rustfmt  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust-build-test.yml
config/: config.yaml
lib/common/cancel/: Cargo.toml
lib/common/common/: Cargo.toml
lib/common/io/: Cargo.toml
lib/common/memory/: Cargo.toml
lib/common/src/: lib.rs
lib/hnswlib-rs/: Cargo.toml  Changes.md  README.md
lib/hnswlib-rs/examples/: ann-glove25-angular.rs  ann-mnist-784-euclidean.rs  ann-sift1m-128-euclidean.rs  embedding.rs  levensthein.rs  poem.rs  random.rs
lib/hnswlib-rs/examples/utils/: annhdf5.rs
lib/hnswlib-rs/src/: api.rs  datamap.rs  dist.rs  dist_neon.rs  filter.rs  flatten.rs  hnsw.rs  hnswio.rs  lib.rs  libext.rs  prelude.rs
lib/hnswlib-rs/tests/: deallocation_test.rs  filtertest.rs  serpar.rs
lib/segment/: Cargo.toml
lib/segment/src/: lib.rs
lib/segment/src/common/: mod.rs  operation_error.rs
lib/segment/src/spaces/: cosine_distance.rs  distance.rs  dot_product.rs  l1_distance.rs  l2_distance.rs  metrics.rs  mod.rs  neon.rs
lib/segment/src/types/: distance.rs  mod.rs  named_vector.rs  tiny_map.rs  vector.rs
lib/segment/tests/: mod.rs  test_col_wrapper.rs  test_db_col_iter.rs  test_scheduled_del_wrapper.rs
quantixar/: 000014.sst  000021.sst  IDENTITY  LOG  MANIFEST-000018  OPTIONS-000020
src/: cli.rs  main.rs  setting.rs
src/actix/: mod.rs
src/actix/handlers/: dataset.rs  mod.rs  vector.rs
src/actix/model/: vector.rs
src/actix/routes/: dataset_api.rs  mod.rs  swagger_api.rs  vector_api.rs
src/actix/table/: collections.rs  mod.rs  toc.rs
src/common/: mmap_type.rs  mod.rs  operation_error.rs  point_id.rs  types.rs
src/engine/: mod.rs
src/engine/index/: base.rs  index.rs  mod.rs  retrieval.rs
src/engine/index/hnsw/: config.rs  index.rs  mod.rs
src/engine/index/ivf/: ivflat.rs  mod.rs
src/engine/search/: reco_query.rs
src/engine/storage/: mod.rs  rocksdb_buffered_delete_wrapper.rs  rocksdb_wrapper.rs  storage_manager.rs  storage_mgr.rs  storage_mgr_opts.rs  storage_mgr_trait.rs  types.rs
src/engine/storage/payload_storage/: mod.rs
src/engine/storage/rocksdb/: mod.rs  rocksdb_buffered_delete_wrapper.rs  rocksdb_wrapper.rs  storage_manager.rs  storage_mgr_opts.rs
src/engine/storage/vector/: async_io.rs  async_io_mock.rs  base.rs  bitvec.rs  chunked_vectors.rs  dense_vector_storage.rs  mmap_vector.rs  mmap_vector_storage.rs  mod.rs
src/engine/table/: toc.rs
src/engine/toc/: collections.rs  mod.rs
src/engine/types/: cow_vector.rs  distance.rs  mod.rs  named_vector.rs  parquet_schema.rs  tiny_kv.rs  tiny_map.rs  types.rs  vector.rs
src/engine/utils/: dataset.rs  mod.rs  named_vector.rs  value.rs
src/http/: mod.rs
src/http/errors/: api_error.rs  mod.rs
src/http/handlers/: dataset.rs
src/http/routes/: dataset.rs  dataset_api.rs  index_api.rs  mod.rs  swagger_api.rs
src/utils/: fmt.rs  fs.rs  mem.rs  mod.rs  path.rs  tar.rs
test/: IDENTITY  LOG  LOG.old.1709021729520636  OPTIONS-000007  hnsw_config.json
