[package]
name = "quantixar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
etcd = { version = "0.9.0", optional = true }
faiss = { version = "0.12.1" }
rocksdb = { version = "0.21.0", default-features = false, features = ["snappy"], optional = true }
atomic_refcell = "0.1.13"
atomicwrites = "0.4.2"
memmap2 = "0.9.0"
sysinfo = "0.29.11"

thiserror = "1.0.56"
log = { version = "0.4.20", features = [] }
lazy_static = "1.4.0"
parking_lot = { version = "0.12.1", features = ["serde"] }
rayon = "1.8.1"
serde_json = "1.0.113"
fs_extra = "1.3.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "tracing", "full"] }
tracing = { version = "0.1", features = ["async-await"], optional = true }


serde_cbor = "0.11.2"
serde = { version = "1.0.196", features = ["derive"] }
schemars = { version = "0.8.16", features = ["uuid1", "preserve_order", "chrono"] }
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
serde-value = "0.7"
tar = "0.4.40"
tracing-subscriber = "0.3.18"
tonic = "0.11.0"
hnsw_rs = "0.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
cgroups-rs = "0.3"
procfs = { version = "0.16", default-features = false }
io-uring = "0.6.2"

[features]
default = []
rock = ["rocksdb"]
etcdb = ["etcd"]

[profile.dev]
incremental = true
